# fuzzy_bf_experiments

./: README.md
algorithms/: execute_function.bf  move_by_adress.bf  move_one_cell_right.bf  move_pointer_to_right_by_value.bf  print_addition_of_two_cells.bf
bf_interpyter/: bf_interpyter.py  pyproject.toml  tests.py
