[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Szymon Górka", email = "55995692+AIn0n@users.noreply.github.com"},
]
dependencies = [
    "numpy>=1.24.3",
]
requires-python = ">=3.10"
license = {text = "GPL-3.0+"}

[tool.pdm.scripts]
test = "python3 -m unittest tests.py"